RESOLVED FIXED 284231
REGRESION(287498@main): Broke internal visionOS builds
https://bugs.webkit.org/show_bug.cgi?id=284231
Summary REGRESION(287498@main): Broke internal visionOS builds
Abrar Rahman Protyasha
Reported 2024-12-07 08:22:41 PST
Attachments
Abrar Rahman Protyasha
Comment 1 2024-12-07 08:22:48 PST
Error: Unknown type name 'FullScreenMediaDetails' at WebFullScreenManager.h:147
Abrar Rahman Protyasha
Comment 2 2024-12-07 08:29:11 PST
EWS
Comment 3 2024-12-07 09:14:29 PST
Committed 287502@main (d6ce6ebd5c1e): <https://commits.webkit.org/287502@main> Reviewed commits have been landed. Closing PR #37595 and removing active labels.
Fujii Hironori
Comment 4 2024-12-07 13:35:17 PST
Thank you very much.
Note You need to log in before you can comment on or make changes to this bug.