REGRESION(287498@main): Broke internal visionOS builds https://bugs.webkit.org/show_bug.cgi?id=284231 rdar://141095901

Unreviewed, fix the build by making WebFullScreenManager aware of
FullScreenMediaDetails.

* Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp:
* Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.h:

Canonical link: https://commits.webkit.org/287502@main